--- a/jex01/src/main/webapp/resources/css/common.css
+++ b/jex01/src/main/webapp/resources/css/common.css
@@ -109,3 +109,14 @@ body {
   font-size: 12px;
   text-align: left;
 }
+
+.check-form-none {
+  font-family: "Roboto", sans-serif;
+  display: block;
+  margin-top: -10px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  font-size: 12px;
+  text-align: left;
+  color: red;
+}
